--- a/microservice/src/main/resources/application.properties
+++ b/microservice/src/main/resources/application.properties
@@ -5,7 +5,6 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-# Configurare pentru trimiterea de e-mailuri prin Gmail SMTP
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=matisoana06@gmail.com
@@ -18,9 +17,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/emaildb
 spring.datasource.username=postgres
 spring.datasource.password=oana06
-
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 
