--- a/microservice/src/main/resources/application.properties
+++ b/microservice/src/main/resources/application.properties
@@ -17,6 +17,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/emaildb
 spring.datasource.username=postgres
 spring.datasource.password=oana06
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 
